--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="arjon1.Png" alt="arjon profile picture"></td>
+      <td><img src="arjon1.png" alt="arjon profile picture"></td>
       <td><h1>Arjon Marte</h1>
       <p><em>Systems Admin</em></p>
       <p>I am a Salesforce Administrator at <strong><a href="https://www.careindeed.com/">Care Indeed</a></strong>.</p></td>
